src/objects/Course_Offering_Period__c.object
<CustomObject>
    <description>The different periods associated with a given course offering.</description>
    <fields>
        <fullName>Class_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The class period in which this course offering is being held.</description>
        <inlineHelpText>The class period in which this course offering is being held.</inlineHelpText>
        <label>Class Period</label>
        <referenceTo>Class_Period__c</referenceTo>
        <relationshipLabel>Course Offering Periods</relationshipLabel>
        <relationshipName>Course_Offering_Periods</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Course_Offering__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The Course Offering to which this record belongs.</description>
        <inlineHelpText>The Course Offering to which this record belongs.</inlineHelpText>
        <label>Course Offering</label>
        <referenceTo>Course_Offering__c</referenceTo>
        <relationshipLabel>Course Offering Periods</relationshipLabel>
        <relationshipName>Course_Offering_Periods</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Facility__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The Facility associated with the Course Offering for the specified time and day of week.</description>
        <inlineHelpText>The Facility associated with the Course Offering for the specified time and day of week.</inlineHelpText>
        <label>Facility</label>
        <referenceTo>Facility__c</referenceTo>
        <relationshipLabel>Course Offering Periods</relationshipLabel>
        <relationshipName>Course_Offering_Periods</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Friday__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The day on which the course is offered (Monday - Sunday).</description>
        <inlineHelpText>The day on which the course is offered (Monday - Sunday).</inlineHelpText>
        <label>Friday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Monday__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The day on which the course is offered (Monday - Sunday).</description>
        <inlineHelpText>The day on which the course is offered (Monday - Sunday).</inlineHelpText>
        <label>Monday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Saturday__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The day on which the course is offered (Monday - Sunday).</description>
        <inlineHelpText>The day on which the course is offered (Monday - Sunday).</inlineHelpText>
        <label>Saturday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sunday__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The day on which the course is offered (Monday - Sunday).</description>
        <inlineHelpText>The day on which the course is offered (Monday - Sunday).</inlineHelpText>
        <label>Sunday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Thursday__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The day on which the course is offered (Monday - Sunday).</description>
        <inlineHelpText>The day on which the course is offered (Monday - Sunday).</inlineHelpText>
        <label>Thursday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tuesday__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The day on which the course is offered (Monday - Sunday).</description>
        <inlineHelpText>The day on which the course is offered (Monday - Sunday).</inlineHelpText>
        <label>Tuesday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wednesday__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The day on which the course is offered (Monday - Sunday).</description>
        <inlineHelpText>The day on which the course is offered (Monday - Sunday).</inlineHelpText>
        <label>Wednesday</label>
        <type>Checkbox</type>
    </fields>
    <label>Course Offering Period</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Course Offering Period Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Course Offering Periods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>